Bug 38981 - Custom properties are no longer correctly exported or imported from doc files
Summary: Custom properties are no longer correctly exported or imported from doc files
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.1 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-05 10:49 UTC by Simon Kornblith
Modified: 2011-12-22 05:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Kornblith 2011-07-05 10:49:32 UTC
In OpenOffice.org 3.3 and earlier versions, OOo Custom Properties were exported and imported as Word Custom Document Properties.

In LibreOffice 3.3 and 3.4, saving as a doc file causes the value of the most recently added custom property to end up in Word's "custom" field. On import, no custom properties are recognized.

Zotero (http://www.zotero.org/) has a "Bookmarks" mode that relies on these properties to make data available to both Word and OpenOffice.org. This no longer works in LO. If there is an alternative mechanism available for preserving document-level data between LO and Word, please let us know and we will investigate it.
Comment 1 gibi 2011-07-22 12:09:23 UTC
I have just tested with LibO 3.4.2rc2 Linux X64 :


1) a file with 8 Properties of Text type is correctly exported

2) Properties of Duration type or Date type are not exported

Take care: it works for DateTime but not for Date.
Comment 2 Simon Kornblith 2011-08-01 12:01:50 UTC
As of 3.4.2, this is close enough to working for our purposes, since we only use text properties. I don't know whether to rename the bug (since, per gibi's comment, apparently other custom properties are affected) or to close it.
Comment 3 Rainer Bielefeld Retired 2011-08-07 09:09:55 UTC
DUP of / related to "Bug 33879 - Custom Fields that worked in MS-Word 2003 and OOO 3.2 are present but not editable!"?

@Simon Kornblith:
Please attach a test kit with source document, result and step by step instruction due to <http://wiki.documentfoundation.org/BugReport>.
Comment 4 Caolán McNamara 2011-08-09 07:48:39 UTC
tackling "Properties of Duration type or Date type are not exported"
Comment 6 Caolán McNamara 2011-08-09 08:48:43 UTC
Bah, after all that, loading something using VT_DATE in Microsoft Word 2010 deems it "invalid", their UI only allows VT_FILETIME to be set. So http://cgit.freedesktop.org/libreoffice/core/commit/?id=c6043980bbc36d58e1ce63b7a97c66774cd6de06 to export DATE as DATETIME.

I can't see that I can do anything about the "duration" field. Microsoft doesn't seem to have an exact equivalent. It does re-use the vt_filetime for "editing" duration for the non-custom properties. But for a custom property there would be no way to distinguish between "duration" and a time stamp :-(.

So I think that's as good as it gets.
Comment 7 Björn Michaelsen 2011-12-22 05:53:11 UTC
RESOLVED, FIXED or CLOSED bugs cant be KEYWORD NEEDINFO.