Resolves: fdo#38981 implement saving/loading PROPVARIANT::DATE ole2 property